# aweber-rs

./: CLAUDE.md  Cargo.toml  README.md
.claude/.claude-plugin/: plugin.json
.claude/skills/: release.md
.claude/skills/aweber-api-reference/: SKILL.md
.claude/skills/changelog/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/: auth.rs  cli.rs  client.rs  commands.rs  endpoints.rs  lib.rs  main.rs  types.rs
